@@ -831,6 +831,8 @@ body {
 
 <p><strong>button_permadeath</strong> | <code>int, int, alignment : X, Y, Alignment</code> | Position of checkbox for toggling permadeath.</p>
 
+<p><strong>bytton_randomize</strong> | <code>int, int, alignment : X, Y, Alignment</code> | Position of the &ldquo;Randomize&rdquo; button.</p>
+
 <p><strong>name_input</strong> | <code>int, int, alignment : X, Y, Alignment</code> | Position of the hero name textbox.</p>
 
 <p><strong>portrait_label</strong> | <code>label</code> | Label for the &ldquo;Choose a Portrait&rdquo; text.</p>
@@ -840,6 +842,8 @@ body {
 <p><strong>permadeath_label</strong> | <code>label</code> | Label for the &ldquo;Permadeath?&rdquo; text.</p>
 
 <p><strong>classlist_label</strong> | <code>label</code> | Label for the &ldquo;Choose a Class&rdquo; text.</p>
+
+<p><strong>classlist_height</strong> | <code>int</code> | Number of visible rows for the class list widget.</p>
 
 <p><strong>portrait</strong> | <code>rectangle</code> | Position and dimensions of the portrait image.</p>
 
@@ -1870,6 +1874,8 @@ body {
 <p>Description of quest files in quests/</p>
 
 <p><strong>name</strong> | <code>string</code> | A displayed name for this quest.</p>
+
+<p><strong>complete_status</strong> | <code>string</code> | If this status is set, the quest will be displayed as completed.</p>
 
 <p><strong>quest.requires_status</strong> | <code>list(string)</code> | Quest requires this campaign status</p>
 
